--- a/Day 1/index-START.html
+++ b/Day 1/index-START.html
@@ -57,7 +57,7 @@
     <audio data-key="76" src="sounds/tink.wav"></audio>
 
     <script>
-      window.addEventListener("keydown", (e) => {
+      const playSound = (e) => {
         const keyCode = e.keyCode;
         const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
         const key = document.querySelector(`.key[data-key="${keyCode}"]`);
@@ -65,8 +65,7 @@
         audio.currentTime = 0;
         audio.play();
         key.classList.add("playing");
-      });
-
+      };
       const removeTransition = (e) => {
         if (e.propertyName !== "transform") return;
         e.target.classList.remove("playing");
@@ -76,6 +75,7 @@
       keys.forEach((key) =>
         key.addEventListener("transitionend", removeTransition)
       );
+      window.addEventListener("keydown", playSound);
     </script>
   </body>
 </html>
